devel/ultimatepp/files/logs
In file included from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlLib/CtrlLib.h:16,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlLib/ChCocoMM.mm:9:
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/iml_header.h:43:33: error: declaration does not declare anything [-fpermissive]
   43 | #define IMAGE_ID(n) static UPP::Image n();
      |                                 ^~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlLib/Ctrl.iml:61:1: note: in expansion of macro 'IMAGE_ID'
   61 | IMAGE_ID(check)
      | ^~~~~~~~
----- HexView ( GUI GCC SHARED BLITZ POSIX BSD OSX ) (10 / 38)
HexView.cpp
